<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="edu.radford.cerj.ketofinder.EditAccountActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/enter_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_tag"
            android:text="@string/username" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/enter_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/about"
            android:text="@string/about_text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/enter_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/photo_url"
            android:text="@string/about_text" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/finalize_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="OK" />

    <Button
        android:id="@+id/delete_account"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/red"
        android:text="@string/delete_account"
        android:textColor="@color/white" />
</LinearLayout>