<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="0dp"
    android:paddingBottom="0dp"
    tools:context=".Account">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="editAccount"
        android:focusable="false"
        android:src="@android:drawable/ic_menu_add"
        app:backgroundTint="@color/colorPrimary" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:onClick="signOut"
        android:focusable="false"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingBottom="8dp"
        android:text="Sign out" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/acc_info"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="134dp"
            android:layout_height="136dp"
            android:src="@mipmap/blank_profile_pic" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_tag" />

        <TextView
            android:id="@+id/users_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TestName" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about" />

        <TextView
            android:id="@+id/about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_text" />


    </LinearLayout>

</FrameLayout>